k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /staging/ble-connect(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ble-messenger
            port:
              number: 80
